# 3D_object_localization

./: .gitignore  CMakeLists.txt  README.md  UdpClient.cpp  UdpClient.h  main.cpp
datasets/: yolov8-train.py
reception/: .UdpClient.cpp.swp  CMakeLists.txt  UdpClient.cpp  UdpClient.h  main.cpp  test_lego_image_inf_results.txt
reception/tools/: UdpServer.cpp
rsDaemon/: CMakeLists.txt  README.md  rs-daemon.cpp  udp_client.cpp  udp_client.h
rsDaemon/tools/: udp_client.cpp
tools/: UdpServer.cpp
